<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/main_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_header"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/advice_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="124dp"
        android:text="@string/not_found"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_header" />

    <Button
        android:id="@+id/next_advice_button"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="155dp"
        android:layout_height="31dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="124dp"
        android:background="@color/colorPrimary"
        android:text="@string/next_advice_button"
        android:textColor="?attr/colorBackgroundFloating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advice_text" />

    <Button
        android:id="@+id/favourite_button"
        android:layout_width="159dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/favourite"
        android:textColor="?attr/colorBackgroundFloating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_advice_button" />

    <TextView
        android:id="@+id/favourite_advices"
        android:layout_width="255dp"
        android:layout_height="118dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/favourites_default_text"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_favourites" />

    <Button
        android:id="@+id/show_favourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="12dp"
        android:text="@string/show_favourites"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favourite_button" />

</android.support.constraint.ConstraintLayout>